# copilot-mission-control

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  cliff.toml  package-lock.json  package.json  playwright.config.ts  tsconfig.renderer.json
.github/: copilot-instructions.md  copilot-setup-steps.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: build.yml  ci.yml
assets/kingdom/tiny-swords/: LICENSE.txt
assets/space/: atlas.json
docs/: index.html  script.js  style.css
docs/provider-schemas/copilot/: 1.0.0.json  1.2.1.json  index.json
scripts/: build-frontend.js  release.js  snap-layouts.js  snap-readme-gifs.mjs  snap-readme.mjs  snap.mjs  test-updater.js
src/: hud.js  index.html  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  lib.rs  main.rs
src/game/: game.ts  hud.js  index.html
src/game/scenes/: CodeKingdom.ts  MissionControl.ts  dashboardView.ts  missionLayout.ts  missionTypes.ts  opsSignals.ts  replayState.ts  sessionSelection.ts  viewport.ts
src/scenes/: MissionControl.ts  opsSignals.ts
tests/: app.spec.ts  code-kingdom.spec.ts  helpers.ts  mission-control.spec.ts
